--- a/src/app.css
+++ b/src/app.css
@@ -9,7 +9,6 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -30,6 +29,8 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  background: white;
+  color: black;
   min-width: 100vw;
   min-height: 100vh;
 }
@@ -70,7 +71,6 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
     background-color: #ffffff;
   }
   a:hover {
