--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,47 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+  --background-image-gradient1: linear-gradient(
+    to right,
+    #7f7fd5,
+    #86a8e7,
+    #91eae4
+  );
+  --background-image-gradient2: linear-gradient(
+    to right,
+    #aa4b6b,
+    #6b6b83,
+    #3b8d99
+  );
+  --background-image-gradient3: linear-gradient(to right, #bdc3c7, #2c3e50);
+  --background-image-logo-gradient: linear-gradient(to right, #fc00ff, #00dbde);
+  --background-image-logo: url('../public/marutsuki.png');
+
+  --font-display: Jura, mono;
+  --font-text: Red Hat Text, mono;
+
+  --ease-overshoot: cubic-bezier(0.175, 0.885, 0.32, 1.333);
+}
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+}
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
