--- a/src/app.css
+++ b/src/app.css
@@ -23,6 +23,10 @@
   --font-text: Red Hat Text, mono;
 
   --ease-overshoot: cubic-bezier(0.175, 0.885, 0.32, 1.333);
+
+  --animate-fadein: 300ms fadein ease-out;
+  --animate-slidein: 1s slidein ease-out;
+  --animate-slidein-right: 1s slidein-right ease-out;
 }
 
 /*
@@ -57,15 +61,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
@@ -91,33 +86,38 @@ h1 {
   text-align: center;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+@keyframes fadein {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    background-color: #ffffff;
+@keyframes animate-slidein {
+  0% {
+    opacity: 0%;
   }
-  a:hover {
-    color: #747bff;
+  100% {
+    opacity: 100%;
   }
-  button {
-    background-color: #f9f9f9;
+}
+
+@keyframes slidein {
+  0% {
+    transform: translateX(-50px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes slidein-right {
+  0% {
+    transform: translateX(50px);
+  }
+  100% {
+    transform: translateX(0px);
   }
 }
